--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "mindscms/laravelshoppingcart": "^2.1",
+        "spatie/laravel-permission": "^5.10",
         "yajra/laravel-datatables": "^10.0"
     },
     "require-dev": {
