--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/breeze": "^1.23",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
+        "laravel/socialite": "^5.8",
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "mindscms/laravelshoppingcart": "^2.1",
